Fixed shifting inner message up instead of the outer container

--- a/src/components/InnerMessage/InnerMessage.scss
+++ b/src/components/InnerMessage/InnerMessage.scss
@@ -8,7 +8,3 @@
 .myMessage {
   background-color: #407EC929;
 }
-
-.shiftedTop {
-  margin-top: -8px;
-}
