--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -14,3 +14,7 @@
   flex-direction: column;
   gap: 4px;
 }
+
+.shiftedTop {
+  margin-top: -8px;
+}
